--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ web:
   command: npm run start
   volumes:
     - .:/var/app
+    - zipper_node_modules:/var/app/node_modules
   ports:
     - "5000:5000"
   environment:
