--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "coffeescript": "^2.0.1",
     "request": "^2.83.0",
     "stream": "0.0.2",
-    "superagent": "^3.6.2"
+    "superagent": "^3.6.2",
+    "throttle": "^1.0.3"
   }
 }
